--- a/pom.xml
+++ b/pom.xml
@@ -276,6 +276,13 @@
             <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <java.version>1.7</java.version>
@@ -284,7 +291,7 @@
         <gson-fire-version>1.8.3</gson-fire-version>
         <swagger-core-version>1.5.24</swagger-core-version>
         <okhttp-version>2.7.5</okhttp-version>
-        <gson-version>2.8.1</gson-version>
+        <gson-version>2.9.0</gson-version>
         <threetenbp-version>1.4.1</threetenbp-version>
         <maven-plugin-version>1.0.0</maven-plugin-version>
         <junit-version>4.13.1</junit-version>
